# Tabletop-Player

./: .gitignore  CMakeLists.txt  README.md
assets/shaders/: vertex.glsl
src/: main.c  renderer.c
